--- a/css/styles.css
+++ b/css/styles.css
@@ -140,4 +140,18 @@ nav {
   z-index: 1;
 }
 
+h1, h2 {
+  text-decoration: underline;
+  font-weight: bold;
+}
+
+.instrucciones {
+  width: 250px;
+  border-radius: 12px 12px 12px 12px;
+}
+
+.instrucciones__lista {
+  list-style-type: upper-roman;
+}
+
 /*# sourceMappingURL=styles.css.map */
