--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,10 @@ h1, h2 {
 .instrucciones {
   width: 250px;
   border-radius: 12px 12px 12px 12px;
+  transition: transform 0.2s;
+}
+.instrucciones:hover {
+  transform: scale(1.3);
 }
 
 .instrucciones__lista {
