--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -156,6 +156,11 @@ h1, h2{
 .instrucciones{
     width:250px;
     border-radius: 12px 12px 12px 12px;
+    transition: transform 0.2s;
+
+    &:hover {
+        transform: scale(1.3);
+      }
 }
 
 .instrucciones__lista{
